# hot-sastp

./: .gitignore  CMakeLists.txt  README.md
doc/: notes.txt
instances/: sastp1000.prob  sastp20.prob  sastp500.prob  sastp_10.prob  sastp_10.sol  sastp_100.prob  sastp_200.prob  sastp_50.prob
report/: report.tex
results/: #greedy_AT_GREEDY_NN.csv#  .#Report_ex2.tex  Makefile  Report.tex  Report_ex2.tex  StatisticsTable.ods  VNDBest.csv~  commands.txt  runs.txt
results/NEWSTAFF/: VNDBest.csv  grasp.csv
scripts/: .gitignore  SolveArray.sh  VNDBest.csv  graphs.sh  processResults.py  processResults.py~  qhostr  qstatr  qstatra  runSolve.sh  sastp.cfg.dist  solveall.sh
src/: .kdev_include_paths  CMakeLists.txt  sastpsolver.cpp  sastpvis.cpp  solver.cpp
src/Ants/: ACO.cpp  ACO.h  Ant.cpp  Ant.h  CMakeLists.txt  PheromoneMatrix.cpp  PheromoneMatrix.h
src/Common/: CMakeLists.txt  Environment.cpp  Environment.h  Instance.cpp  Instance.h
src/Framework/: CMakeLists.txt  SASTPDotPrinter.cpp  SASTPDotPrinter.h  SASTPSolution.cpp  SASTPSolution.h  SASTProblem.cpp  SASTProblem.h
src/Solver/: AbstractSearch.cpp  AbstractSearch.h  CMakeLists.txt  Driver.cpp  Driver.h  GVNS.cpp  GVNS.h  Grasp.cpp  Grasp.h  GreedyTour.cpp  GreedyTour.h  LocalSearch.cpp  LocalSearch.h  Neighborhood.cpp  Neighborhood.h  TourNeighborhood.cpp  TourNeighborhood.h  VND.cpp  VND.h
src/Support/: CMakeLists.txt  DotPrinter.cpp  DotPrinter.h  Environment.cpp  Environment.h  Instance.cpp  Instance.h  Lookup.cpp  Lookup.h  ProblemHelper.cpp  ProblemHelper.h  SpotSearch.cpp  SpotSearch.h
(+188 files in other folders)
